# PDF_toolkits

./: .dockerignore  .gitignore  CHANGELOG.md  DAY3_DESKTOP_HANDOFF.txt  DESKTOP_TEST_RESULTS.txt  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  render.yaml  vercel.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/api/analytics/: route.ts
app/api/jobs/[tool]/: route.ts
app/changelog/: page.tsx
app/contact/: page.tsx
app/download/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/tools/[tool]/: page.tsx  tool-workspace.tsx
components/: AnalyticsEvent.tsx  AppShell.tsx  EmptyState.tsx  ErrorState.tsx  ExternalLinkGuard.tsx  FileDropzone.tsx  HomeDashboard.tsx  InfoPage.tsx  PageOrganizer.tsx  ProcessingProgress.tsx  RelatedTools.tsx  ResultCard.tsx  ToolCard.tsx  ToolOptionPanel.tsx  ToolPageLayout.tsx  UploadedFileCard.tsx  WorkflowSteps.tsx
config/: site.ts  tools.ts
docs/: DESKTOP.md  RELEASE_CHECKLIST.md
lib/: analytics.ts  tools.ts
lib/client/: processPdfJob.ts
lib/pdf/: processPdfJob.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
