[package]
name = "pdf-toolkit"
version = "0.1.0"
description = "Lightweight desktop shell for PDF Toolkit"
authors = ["PDF Toolkit"]
edition = "2021"

[lib]
name = "pdf_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
